# ramp-maker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci-build.yml
examples/: basic.rs
scripts/: build.sh
src/: flat.rs  iter.rs  lib.rs  trapezoidal.rs
src/util/: mod.rs  testing.rs  traits.rs
