[package]
name    = "ramp-maker"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

[features]
std = [] # standard library support


[dependencies]
fixed-sqrt = "0.2.4"
typenum    = "1.12.0"

[dependencies.fixed]
version  = "1.5.0"
features = ["num-traits"]

[dependencies.num-traits]
version          = "0.2.14"
default-features = false
