[package]
name    = "ramp-maker"
version = "0.2.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

description = "Stepper Acceleration Ramp Generator"
repository  = "https://github.com/flott-motion/ramp-maker"
license     = "0BSD"
keywords    = ["stepper", "motor", "acceleration", "ramp", "profile"]
categories  = ["embedded", "no-std", "science::robotics"]


[features]
std = [] # standard library support


[dependencies]
az         = "1.1.0"
fixed-sqrt = "0.2.4"
typenum    = "1.12.0"

[dependencies.fixed]
version  = "1.5.0"
features = ["az", "num-traits"]

[dependencies.libm]
version  = "0.2.1"
optional = true

[dependencies.num-traits]
version          = "0.2.14"
default-features = false


[dev-dependencies]
approx = "0.4.0"


[[example]]
name              = "basic"
required-features = ["std"]
